force-app/main/default/objects/Partner_Portal_User_Details__c/Partner_Portal_User_Details__c.object-meta.xml
<CustomObject>
    <label>Partner Portal User Details</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Partner Portal User Details	 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Portal User Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>