force-app/main/default/objects/Partner_Portal_User_Details__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <label>Event</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invited</fullName>
            </value>
            <value>
                <fullName>Enrolled</fullName>
            </value>
            <value>
                <fullName>De-activation Requested</fullName>
            </value>
            <value>
                <fullName>Admin Initiated - Remove from Firm Account</fullName>
            </value>
            <value>
                <fullName>Self Opt Out</fullName>
            </value>
            <value>
                <fullName>Remove from Firm Account</fullName>
            </value>
            <value>
                <fullName>Opt out from platform</fullName>
            </value>
            <value>
                <fullName>Admin Invite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>