force-app/main/default/objects/Partner_Portal_User_Details__c/fields/Referral_Contact__c.field-meta.xml
<CustomField>
    <fullName>Referral_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referral Contact</label>
    <referenceTo>Referral_Contact__c</referenceTo>
    <relationshipLabel>Partner Portal User Details</relationshipLabel>
    <relationshipName>Partner_Portal_User_Details</relationshipName>
    <type>Lookup</type>
</CustomField>