force-app/main/default/objects/Partner_Portal_User_Details__c/fields/Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Request_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Request Date</label>
    <type>DateTime</type>
</CustomField>